Iteration 2: recipe page completed
Successfully completed the tasks associated with iteration 2 of the project.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <meta charsel="UTF-8">
+        <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/smoothie.html">Cranberry Orange Smoothie</a>
     </body>
 </html>
