Iteration 3: recipe page content completed
Relevant content now associated with proper pages by moving HTML previously
written in index to smoothie.html. Additionally, steps for iteration 3
have been achieved.

--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -7,5 +7,32 @@
 
     <body>
         <h1>Cranberry Orange Smoothie</h1>
+        <img src="../images/cranberry.jpg" alt="image of a cranberry orange smoothie" height="310" width="310">     
+        <h2>Description</h2>
+        <p>
+            The Cranberry-Orange Smoothie recipe combines fresh cranberries, ripe bananas, and orange juice for a refreshing and vibrant drink. 
+            Simply blend together the cranberries and bananas with yogurt, orange juice, and a touch of honey until smooth. 
+        <p>
+            This nutrient-packed smoothie is not only delicious but also rich in vitamin C and antioxidants, 
+            making it a perfect healthy treat to start your day or enjoy as a snack.
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tbs flaxseeds</li>
+            <li>1 tbsp hemp seeds</li>
+            <li>1 banana</li>
+            <li>1 1/2 cup fresh orange juice</li>
+            <li>1/2 scoop</li>
+            <li>1/2 cup frozen cranberries</li>
+            <li>1 tsp bee pollen</li>
+            <li>honey to taste</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Blend</li>
+            <li>Pour</li>
+        </ol>
     </body>
 </html>
