--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -2,7 +2,7 @@
 <html>
     <head lang="en">
         <meta charset="UTF-8">
-        <title>Cranberry Orange Smoothie</title>
+        <title>Cranberry Orange Smoothie Recipe</title>
     </head>
 
     <body>
