--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/smoothie.html">Cranberry Orange Smoothie</a>
+        <ul>
+            <li><a href="./recipes/smoothie.html">Cranberry Orange Smoothie</a></li>
+            <li><a href=./recipes/baked-chicken.html>Simple Baked Chicken</a></li>
+            <li><a href="./recipes/acai.html">Acai Bowl</a></li>
+        </ul>
+        
     </body>
 </html>
