--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Cranberry Orange Smoothie</h1>
+        <h1>Baked Chicken</h1>
         <img src="../images/chicken.jpg" alt="image of a cranberry orange smoothie" height="310" width="310">     
         <h2>Description</h2>
         <p>
