The Cascade Assignment - Question 2
Worked on applying some of the basic CSS learned so far to the recipe
project assigned in a previous lesson.

--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Simple Baked Chicken Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
