--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Cranberry Orange Smoothie Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -10,7 +11,7 @@
         <img src="../images/cranberry.jpg" alt="image of a cranberry orange smoothie" height="310" width="310">     
         <h2>Description</h2>
         <p>
-            The Cranberry-Orange Smoothie recipe combines fresh cranberries, ripe bananas, and orange juice for a refreshing and vibrant drink. 
+            <div class="bold">The Cranberry-Orange Smoothie</div> recipe combines fresh cranberries, ripe bananas, and orange juice for a refreshing and vibrant drink. 
             Simply blend together the cranberries and bananas with yogurt, orange juice, and a touch of honey until smooth. 
         <p>
             This nutrient-packed smoothie is not only delicious but also rich in vitamin C and antioxidants, 
