--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
